db/bridge.log
./start_bridge.sh: line 4: pip: command not found
./start_bridge.sh: line 5: uvicorn: command not found
nohup: failed to run command 'uvicorn': No such file or directory
Traceback (most recent call last):
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/bin/uvicorn", line 6, in <module>
    sys.exit(main())
             ~~~~^^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/click/core.py", line 1514, in __call__
    return self.main(*args, **kwargs)
           ~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/click/core.py", line 1435, in main
    rv = self.invoke(ctx)
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/click/core.py", line 1298, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/click/core.py", line 853, in invoke
    return callback(*args, **kwargs)
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/uvicorn/main.py", line 441, in main
    run(
    ~~~^
        app,
        ^^^^
    ...<48 lines>...
        reset_contextvars=reset_contextvars,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/uvicorn/main.py", line 617, in run
    server.run()
    ~~~~~~~~~~^^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/uvicorn/server.py", line 75, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
  File "/usr/lib/python3.14/asyncio/runners.py", line 204, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "/usr/lib/python3.14/asyncio/runners.py", line 127, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "/usr/lib/python3.14/asyncio/base_events.py", line 719, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/uvicorn/server.py", line 79, in serve
    await self._serve(sockets)
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/uvicorn/server.py", line 86, in _serve
    config.load()
    ~~~~~~~~~~~^^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/uvicorn/config.py", line 449, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/home/rend/Projects/the-fractured-throne-tcg/db/venv/lib/python3.14/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "/usr/lib/python3.14/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1406, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1371, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1342, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 938, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 755, in exec_module
  File "<frozen importlib._bootstrap_external>", line 893, in get_code
  File "<frozen importlib._bootstrap_external>", line 823, in source_to_code
  File "<frozen importlib._bootstrap>", line 491, in _call_with_frames_removed
  File "/home/rend/Projects/the-fractured-throne-tcg/db/bridge.py", line 33
    conn = psycopg2.connect(**DATABASE)
    ^^^^
IndentationError: expected an indented block after 'try' statement on line 32
nohup: failed to run command 'uvicorn': No such file or directory
INFO:     Started server process [192397]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
INFO:     127.0.0.1:43668 - "GET /health HTTP/1.1" 200 OK
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [192397]
